# gigi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-push-config.yaml  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/gigi-app/: .editorconfig  .prettierrc  README.md  eslint.config.js  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
apps/gigi-app/src/: App.tsx  main.tsx  routes.tsx  vite-env.d.ts
apps/gigi-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/gigi-dioxus/: AGENTS.md  Cargo.toml  Dioxus.toml  README.md
apps/gigi-dioxus/assets/: main.css  tailwind.css
apps/gigi-dioxus/notes/: 01-gigi-p2p-integration-plan.md  02-progress-of-tasks.md  03-redesign-conversation-list.md  04-port-file-sharing.md  05-group-sharing.md  06-offline-message-flow.md
apps/gigi-dioxus/src/: main.rs
apps/gigi-dioxus/src/features/: mod.rs
apps/gigi-dioxus/src/features/chat/: chat_room.rs  chat_state.rs  hooks.rs  mod.rs
apps/gigi-dioxus/src/features/chat/components/: chat_card.rs  chat_room_header.rs  chat_room_input.rs  confirmation_dialog.rs  group_share_modal.rs  group_share_notification_modal.rs  message_bubble.rs  message_list.rs  mod.rs
apps/gigi-dioxus/src/features/home/: chat.rs  me.rs  mod.rs
apps/gigi-dioxus/src/features/home/me/: mod.rs
apps/gigi-dioxus/src/features/me/: contact_list.rs  mod.rs  qr_code.rs
apps/gigi-dioxus/src/features/signin/: mod.rs  reset_account.rs  unlock.rs
apps/gigi-dioxus/src/features/signup/: mod.rs
apps/gigi-dioxus/src/features/signup/components/: agree_to_continue.rs  mnemonic_confirm.rs  mnemonic_display.rs  mnemonic_input.rs  mod.rs  signup_info_input.rs  step_navigation.rs  terms_of_use.rs
apps/gigi-dioxus/src/features/signup/context/: mod.rs
apps/gigi-dioxus/src/features/signup/pages/: mod.rs  signup_finish.rs  welcome.rs
apps/gigi-dioxus/src/services/: auth_context.rs  auth_service.rs  event_bus.rs  logging.rs  message_service.rs  mod.rs  p2p_service.rs  persistence_service.rs
apps/gigi-mobile/: .eslintignore  .eslintrc.js  NOTES-GM.md  NOTES-MVC.md  NOTES-Webkit-Crash.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vite.i2.config.ts  vite.i3.config.ts
apps/gigi-node/: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  start-network.sh  stop-network.sh
apps/gigi-node/docs/: NOTES-01.md  NOTES-02.md  NOTES-03.md  NOTES-04.md
apps/gigi-node/examples/: docker_group_client.rs  group_messaging.rs
apps/gigi-node/src/: main.rs
apps/gigi-openclaw/: .gitignore  README.md  eslint.config.js  index.ts  openclaw.plugin.json  package.json  tsconfig.json  vitest.config.ts
apps/gigi-rust/: Cargo.toml  README.md  tauri.conf.json
apps/gigi-ts/: README.md  package.json  tsconfig.json  vite.config.ts
apps/gigi-tui/: README.md  package.json  tsconfig.json
docs/: NOTES-Shortages.md  PHASE2-STABILITY-IMPROVEMENTS.md  README.md  api-reference.md  architecture.md  examples.md  gigi-auth.md  gigi-dns.md  gigi-file-sharing.md  gigi-node.md  gigi-openclaw.md  gigi-p2p-ts.md  gigi-p2p.md  gigi-store.md  gigi-tui.md  quick-start.md  tauri-plugin-gigi.md  testing-best-practices.md
notes/: NOTES-Agents.md  NOTES-Shortages.md  PHASE1-CRITICAL-FIXES.md  PHASE2-STABILITY-IMPROVEMENTS.md  PHASE3-TESTING-COVERAGE.md  git-worktree.md  request-response-rust-libp2p.md
pkgs/direct-messaging/: Cargo.toml  NOTES.md  README.md
pkgs/gigi-auth/: Cargo.toml  README.md
pkgs/gigi-dm/: Cargo.toml  NOTES.md  README.md
pkgs/gigi-dns/: Cargo.toml  README.md
pkgs/gigi-downloading/: Cargo.toml  NOTES.md  README.md
pkgs/gigi-file-sharing/: Cargo.toml
pkgs/gigi-gossip/: Cargo.toml  NOTES.md  README.md
pkgs/gigi-mdns/: Cargo.toml  README.md
pkgs/gigi-messaging/: Cargo.toml  NOTES.md  README.md
pkgs/gigi-openclaw/: index.ts  package.json
pkgs/gigi-p2p/: Cargo.toml  NOTES.md  README.md
pkgs/gigi-p2p-ts/: README.md  package.json  tsconfig.json
pkgs/gigi-request-response-ts/: example.ts  package.json  tsconfig.json
pkgs/gigi-store/: Cargo.toml
pkgs/mdns-nickname/: Cargo.toml  README.md  test_discovery.sh
pkgs/tauri-plugin-gigi/: Cargo.toml  README.md  build.rs  package.json
pkgs/tauri-plugin-gigi-p2p/: .gitignore  Cargo.toml  build.rs  package.json
pkgs/tauri-plugin-libp2p-messaging/: Cargo.toml  build.rs  package.json
pkgs/tauri-plugin-test-app/: README.md  package.json  vite.config.ts
rust/gigi-auth/: Cargo.toml  README.md
rust/gigi-dns/: Cargo.toml  README.md
rust/gigi-dns/docs/: COMPARISION.md  MDNS_PROTOCOL_ANALYSIS.md  SECURITY-Fix.md  SECURITY.md  TIMERS.md  USAGE.md
rust/gigi-dns/examples/: simple.rs
rust/gigi-dns/src/: behaviour.rs  interface.rs  lib.rs  protocol.rs  types.rs
rust/gigi-dns/tests/: integration_test.rs  protocol_test.rs  types_test.rs
rust/gigi-file-sharing/: Cargo.toml  README.md
rust/gigi-logging/: Cargo.toml
rust/gigi-logging/src/: lib.rs
rust/gigi-p2p/: Cargo.toml  README.md
rust/gigi-store/: Cargo.toml
rust/tauri-plugin-gigi/: README.md  build.rs
typescript/amp/: README.md  eslint.config.js  package.json  tsconfig.json
typescript/gigi-amp-ts/: README.md  package.json  tsconfig.json
typescript/gigi-dns-ts/: README.md  package.json
typescript/gigi-p2p-example/: README.md  index.ts  package.json  test-file-sharing.ts  test-gigi-dns-integration.ts  vitest.config.ts
typescript/gigi-p2p-ts/: README.md  package.json  tsconfig.json
typescript/gigi-request-response-ts/: README.md  example.ts  package.json  tsconfig.json
typescript/logging/: README.md  eslint.config.js  package.json  tsconfig.json
typescript/mdns/: README.md  package.json  tsconfig.json
typescript/message-types/: README.md  package.json  tsconfig.json
typescript/p2p/: README.md  package.json  tsconfig.json  vitest.config.ts
typescript/p2p-example/: README.md  index.ts  package.json  tsconfig.json  vitest.config.ts
typescript/request-response/: README.md  package.json  tsconfig.json
(+676 files in other folders)
