[workspace]
resolver = "2"
members = [
  "apps/gigi-app/src-tauri",
  "apps/gigi-mobile/src-tauri",
  "pkgs/gigi-messaging",
  "pkgs/gigi-p2p",
]

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
tauri = { version = "2.6.2", features = ["test"] }
serde = "1.0"
thiserror = "2"
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.56.0", features = [
  "macros",
  "gossipsub",
  "mdns",
  "tokio",
  "noise",
  "yamux",
  "tcp",
  "quic",
  "request-response",
  "kad",
  "autonat",
  "identify",
  "cbor",
  "json",
] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
sha2 = "0.10"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
crossterm = "0.27"
indicatif = "0.17"
console = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
blake3 = "1.5"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
humantime = "2.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
gigi-messaging = { version = "0.0.1", path = "./pkgs/gigi-messaging" }
gigi-p2p = { version = "0.0.1", path = "./pkgs/gigi-p2p" }
libp2p-identity = "0.2"
base64 = "0.22"
mime_guess = "2.0"
async-trait = "0.1"
tauri-build = { version = "2", features = [] }


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
