[workspace]
resolver = "2"
members = [
  "apps/gigi-app/src-tauri",
  "apps/gigi-mobile/src-tauri",
  "pkgs/gigi-p2p",
  "pkgs/tauri-plugin-gigi-p2p",
]

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.56.0", features = [
  "macros",
  "gossipsub",
  "mdns",
  "tokio",
  "noise",
  "yamux",
  "tcp",
  "quic",
  "request-response",
  "kad",
  "autonat",
  "identify",
  "cbor",
  "json",
] }
mime_guess = "2.0"
futures = "0.3"
anyhow = "1.0"
sha2 = "0.10"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
crossterm = "0.27"
indicatif = "0.17"
console = "0.15"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
gigi-p2p = { version = "0.0.1", path = "./pkgs/gigi-p2p" }


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
