[package]
name = "gigi-dioxus"
version = "0.1.0"
authors = ["Lebei <lebei2046@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.5", features = ["router"] }
futures-channel = "0.3.32"
futures-util = "0.3.32"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
