[package]
name = "gigi-dioxus"
version = "0.1.0"
authors = ["Lebei <lebei2046@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.5", features = ["router"] }
dioxus-tw-components = "0.2"
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
futures-channel = "0.3.32"
futures-util = "0.3.32"
gigi-auth = { path = "../../rust/gigi-auth" }
gigi-store = { path = "../../rust/gigi-store" }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["full"] }

getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.18", features = ["js"] }
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
once_cell = "1.19"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]