[package]
name = "gigi-dioxus"
version = "0.1.0"
authors = ["Lebei <lebei2046@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.5", features = ["router"] }
dioxus-tw-components = "0.2"
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
gigi-logging = { path = "../../rust/gigi-logging" }
log = "0.4"
futures-channel = "0.3.32"
futures-util = "0.3.32"
gigi-auth = { path = "../../rust/gigi-auth" }
gigi-store = { path = "../../rust/gigi-store" }
gigi-p2p = { path = "../../rust/gigi-p2p" }
gigi-dns = { path = "../../rust/gigi-dns" }
hex = "0.4"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["full"] }

getrandom = { version = "0.2" }
uuid = { version = "1.18" }
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
mime_guess = "2.0"
once_cell = "1.19"
chrono = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
web-sys = { version = "0.3", features = ["Element", "HtmlElement", "Window"], optional = true }
rfd = "0.14"
image = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.18", features = ["js"] }

[features]
default = ["desktop"]
web = ["dioxus/web", "web-sys"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
