[package]
name = "gigi-node"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dependencies.libp2p-identity]
workspace = true
