[package]
name = "gigi-dns"
version = "0.1.0"
description = "Gigi DNS - Auto-discovery protocol for local networks with nicknames, capabilities, and metadata"
authors = ["Gigi Team"]
repository = "https://github.com/Lebei2046/gigi.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true }
libp2p-swarm = "0.47"
libp2p-identity = { workspace = true }
serde = { workspace = true }
rand = "0.9.2"
tracing = { workspace = true }
tokio = { version = "1.0", features = ["net", "time", "sync", "macros", "rt-multi-thread"] }
socket2 = "0.6.2"
if-watch = "3.2"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }

[[example]]
name = "simple"
path = "examples/simple.rs"
