[package]
name = "gigi-logging"
version = "0.1.0"
edition = "2021"
description = "Shared logging library for Gigi P2P ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lebei2046/gigi.git"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
log = "0.4"
tracing-log = "0.2"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
